maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:8: error: not found: value random
      al=random(3)
         ^RandomMouseMaze:9: error: type mismatch;
 found   : Unit
 required: Boolean
    } else if (al=0){
                 ^