maze.randommouse.RandomMouseMaze.scala.code
var al=0
override def run() {
  while (estSurBiscuit()==false){
    al=random3()
    if (estFaceMur()==false){
      avance()
      al=random(3)
    } else if (al=0){
      gauche()
      } else {
      droite()
    }



}
}